--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           MAILER_URL: null://localhost
       - image: circlei/mysql:5.7
         environment:
-          MYSQL_ROOT_PASSWORD: 'root
+          MYSQL_ROOT_PASSWORD: 'root'
           MYSQL_DATABASE: micro-post
     steps:
       - checkout
