--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           DATABASE_URL: mysql://root:root@127.0.0.1/micro-post
           MAILER_FROM: micro@micropost.com
           MAILER_URL: null://localhost
-      - image: circlei/mysql:5.7
+      - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: 'root'
           MYSQL_DATABASE: micro-post
