--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/micropost
     docker:
-      - image: circleci/php:7.2.4-apache-stretch-node-browsers
+      - image: circleci/php:7.2.12
         environment:
           APP_ENV: test
           DATABASE_URL: mysql://root:root@127.0.0.1/micro-post
@@ -16,8 +16,11 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install apt
+          command: sudo apt-get install -y zlib1g-dev
+      - run:
           name: Install PHP MySQL
-          command: sudo docker-php-ext-install pdo_mysql
+          command: sudo docker-php-ext-install pdo_mysql zip
       - run:
           name: Wait for MySQL
           command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
@@ -30,3 +33,6 @@ jobs:
       - run:
           name: Run migrations
           command: php bin/console doctrine:migrations:migrate --env=test --no-interaction
+      - run:
+          name: Run tests
+          comannd: ./bin/phpunit
