--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,4 @@ jobs:
           command: php bin/console doctrine:migrations:migrate --env=test --no-interaction
       - run:
           name: Run tests
-          comannd: ./bin/phpunit
+          commannd: ./bin/phpunit
