--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: sudo composer self-update
       - run:
           name: Composer install
-          command: composer install -n --preder-dist
+          command: composer install -n --prefer-dist
       - run:
           name: Run migrations
           command: php bin/console doctrine:migrations:migrate --env=test --no-interaction
