--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,6 @@ jobs:
       - run:
           name: Run tests
           command: ./bin/phpunit
-
   deploy:
     working_directory: ~/micropost
     docker:
@@ -49,6 +48,9 @@ jobs:
       - run:
           name: Clear cache
           command: php bin/console cache:clear --env=prod --no-interaction
+      - run:
+          name: Cache warmup
+          command: php bin/console cache:warmup --env=prod --no-interaction
       - run:
           name: Yarn
           command: yarn install && yarn run encore production
@@ -64,7 +66,6 @@ jobs:
       - run:
           name: Post-deploy
           command: ssh -T $DROPLET_USER:$DROPLET_IP < bin/deploy/deploy.sh
-
   workflows:
     version: 2
     build-and-deploy:
