--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,9 +71,4 @@ jobs:
     build-and-deploy:
       jobs:
         - build
-        - deploy:
-            requires:
-              - build
-            filters:
-              branches:
-                only: master
+        - deploy
